add class loader

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   </header>
   <main>
     <div class="gallery"></div>
-    <div class="loader"></div>
+    <div class="loader hidden"></div>
   </main>
   <script type="module" src="./main.js"></script>
 
